--- a/requirements.txt
+++ b/requirements.txt
@@ -62,7 +62,8 @@ oauthlib==3.2.2
 opencv-python==4.11.0.86
 packaging==24.2
 paramiko==3.5.1
-Pillow==10.1.0
+#Pillow==10.1.0
+Pillow==10.4.0
 plumbum==1.9.0
 promise==2.3
 prompt-toolkit==2.0.9
@@ -126,4 +127,5 @@ Werkzeug==3.0.1
 whitenoise==6.11.0
 wsproto==1.2.0
 zstandard==0.23.0
+
 
