--- a/requirements.txt
+++ b/requirements.txt
@@ -94,7 +94,7 @@ python-telegram-bot==13.0
 python3-openid==3.2.0
 pytweening==1.0.4
 pytz==2023.3.post1
-pywin32==310
+#pywin32==310
 qrcode==7.4.2
 regex==2023.10.3
 requests==2.31.0
@@ -127,5 +127,6 @@ Werkzeug==3.0.1
 whitenoise==6.11.0
 wsproto==1.2.0
 zstandard==0.23.0
+
 
 
