--- a/requirements.txt
+++ b/requirements.txt
@@ -127,6 +127,10 @@ Werkzeug==3.0.1
 whitenoise==6.11.0
 wsproto==1.2.0
 zstandard==0.23.0
+psycopg2-binary>=2.9
+whitenoise>=6.6
+dj-database-url>=2.1
+
 
 
 
